# canpl_analytics

./: dbt_project.yml  pyproject.toml
data/centre-circle-data-gdrive-pull/2019 Season/: CPLPlayerByGame2019.xlsx  CPLPlayerTotals2019.xlsx  CPLTeamByGame2019.xlsx  CPLTeamByGame2020.xlsx  CPLTeamTotals2019.xlsx  CPLTeamTotals2022.xls
data/centre-circle-data-gdrive-pull/2020 Season/: CPLPlayerByGame2020.xlsx  CPLPlayerByGame2022    .xls  CPLPlayerTotals2020.xlsx  CPLTeamByGame2022  .xls  CPLTeamByGame2022.csv  CPLTeamTotals2020.xlsx
data/centre-circle-data-gdrive-pull/2021 Season/: CPLPlayerByGame2021.xlsx  CPLPlayerTotals2021.xlsx  CPLPlayerTotals2022   .xls  CPLTeamByGame2021.xlsx  CPLTeamTotals2021.xlsx
data/centre-circle-data-gdrive-pull/2022 Season/: CPLPlayerByGame2022.xls  CPLPlayerTotals2022   .xls  CPLPlayerTotals2022.xls  CPLTeamByGame2022  .xls  CPLTeamByGame2022.xls  CPLTeamTotals2022.xls
data/raw/players/games/: CPLPlayerByGame2022.csv
data/raw/players/totals/: CPLPlayerTotals2022.csv
data/raw/teams/totals/: CPLTeamTotals2022.csv
scripts/: extract_load_headers.py  main.py  test_db_connection.py
